# afrodite

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac  project.hen
src/: Makefile.am  completionengine.vala  libafrodite-0.28.deps  libafrodite-0.28.pc.in  queryresult.vala  symbolresolver.vala  utils.vala
